--- a/automations.yaml
+++ b/automations.yaml
@@ -352,7 +352,7 @@
   trigger:
   - platform: state
     entity_id:
-    - binary_sensor.woonkamersensor_occupancy
+    - binary_sensor.motionwoonkamer_occupancy
     to: 'on'
     from: 'off'
   condition:
@@ -380,7 +380,7 @@
   - wait_for_trigger:
     - platform: state
       entity_id:
-      - binary_sensor.woonkamersensor_occupancy
+      - binary_sensor.motionwoonkamer_occupancy
       from: 'on'
       to: 'off'
   - delay: 1
@@ -474,7 +474,7 @@
   alias: AUT026 In of uit zone De Heeg
   trigger:
   - platform: zone
-    entity_id: device_tracker.telefoondaan, device_tracker.telefoongabrie, device_tracker.telefoonbas
+    entity_id: device_tracker.telefoondaan, device_tracker.telefoonbas
     zone: zone.de_heeg
     event: enter
   action:
@@ -1133,6 +1133,7 @@
       area_id:
       - 23e6c7fb9f204e3eb18fe60dcaf3c181
       - tuin
+      - 7ed3a9f5218c404ba791bca0ead7c973
       entity_id: light.led_bank_level_light_color_on_off
   - service: climate.set_preset_mode
     data:
@@ -1184,11 +1185,10 @@
       brightness: 75
       color_temp: 369
     target:
-      device_id:
-      - b7125a2c255c7161289d3c3b3d86cedc
+      device_id: b7125a2c255c7161289d3c3b3d86cedc
   - delay:
       hours: 0
-      minutes: 3
+      minutes: 2
       seconds: 0
       milliseconds: 0
   - service: light.turn_off
@@ -2080,4 +2080,113 @@
         data: {}
         target:
           entity_id: climate.airco_bas
+  mode: single
+- id: '1689572136834'
+  alias: AUT073 Afwasmachine starten
+  description: ''
+  trigger:
+  - platform: time
+    at: '11:00:00'
+  condition: []
+  action:
+  - service: switch.toggle
+    data: {}
+    target:
+      entity_id: switch.dishwasher_program_eco50
+  - service: notify.mobile_app_telefoongabrie
+    data:
+      message: Afwasmachine aan
+      title: Afwasmachine aan
+  - service: automation.turn_off
+    data:
+      stop_actions: false
+    target:
+      entity_id:
+      - automation.aut063_afwasmachine_starten
+  mode: single
+- id: '1689620301055'
+  alias: AUT074 Camera snapshot
+  description: Stuur telefoon notificatie bij camera snapshot
+  trigger:
+  - platform: state
+    entity_id:
+    - binary_sensor.relais001_button
+    to: 'on'
+  condition: []
+  action:
+  - service: camera.snapshot
+    data:
+      filename: /config/www/tmp/snapshot-doorbell.jpg
+    target:
+      entity_id: camera.reo01_snapshots_main
+  - service: notify.AlleNotificaties
+    data:
+      message: Voordeur camera
+      title: Voordeur
+      data:
+        image: https://tm9yn346vuh18k59ti8annjka1bjkqbj.ui.nabu.casa/local/tmp/snapshot-doorbell.jpg
+  - service: notify.telegram
+    data:
+      message: Er is iemand aan de voordeur
+      data:
+        photo:
+        - file: /config/www/tmp/snapshot-doorbell.jpg
+  mode: single
+- id: '1689744313161'
+  alias: AUT075 Goedemorgen
+  description: Tussen 6 en 9 automatisch gordijnen open
+  trigger:
+  - platform: state
+    entity_id:
+    - binary_sensor.motionwoonkamer_occupancy
+    to: 'on'
+    from: 'off'
+  condition:
+  - condition: state
+    entity_id: light.woonkamertotaal
+    state: 'off'
+  - condition: time
+    after: 06:00:00
+    before: 09:00:00
+  - condition: device
+    device_id: 2cfb950c8bdd9e29cc6e74e4d6e6b4fd
+    domain: device_tracker
+    entity_id: f749c261bfd41d1bd8461189c15a1745
+    type: is_home
+  action:
+  - service: light.turn_on
+    data: {}
+    target:
+      device_id:
+      - 44b1d58487b404c5363bf0acf7d932c8
+  - service: motion_blinds.set_absolute_position
+    data:
+      absolute_position: 60
+    target:
+      device_id:
+      - cd131e52c35e0c8e68e4d81337749c3f
+      - 66a3fee2bfc323a1bd5ce11f04e06d0b
+  mode: single
+- id: '1689765609631'
+  alias: AUT075 Persoon gezien
+  description: ''
+  trigger:
+  - type: turned_on
+    platform: device
+    device_id: 343f3303284261db218a4317b481d4c9
+    entity_id: c72210d6e0893821b89aa9da75615173
+    domain: binary_sensor
+  condition: []
+  action:
+  - service: camera.snapshot
+    data:
+      filename: /config/www/tmp/snapshot-doorbell.jpg
+    target:
+      entity_id: camera.reo01_snapshots_main
+  - service: notify.mobile_app_telefoongabrie
+    data:
+      message: Persoon herkend
+      title: Persoon herkend
+      data:
+        image: https://tm9yn346vuh18k59ti8annjka1bjkqbj.ui.nabu.casa/local/tmp/snapshot-doorbell.jpg
   mode: single
