--- a/lights.yaml
+++ b/lights.yaml
@@ -41,6 +41,7 @@
     - light.signify_netherlands_b_v_llc020_huelight
     - light.signify_netherlands_b_v_llc020_huelight_2
     - light.plafondlamp_gabrie
+    - light.bedlampje
 
 - platform: group
   name: KamerBas
